--- a/package.json
+++ b/package.json
@@ -3,5 +3,9 @@
   "version": "1.0.0",
   "main": "src/main.js",
   "repository": "https://github.com/mentorship-olehmushka/async-prog-nonblock-io-streams.git",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "generate": "node ./src/main.js generate",
+    "transform": "node ./src/main.js transform"
+  }
 }
